# gepa-poc-v2

./: .env.example  .gitignore  BATCH_UPLOAD_FIXES.md  CLAUDE.md  PRD.md  README.md  TEST_DATA_GUIDE.md  USAGE.md  exp1.md  generate_test_resumes.py  pyproject.toml  seed_data.py
backend/: __init__.py  main.py
backend/constants/: default_prompts.py
backend/core/: config.py  database.py  encoding.py  litellm_client.py  llm.py  pricing.py  usage_tracker.py
backend/gepa_integration/: __init__.py  dataset_split.py  evaluator.py  (+7 more)
fresh_test_resumes/: fresh_resume_1.txt  fresh_resume_2.txt  fresh_resume_3.txt  fresh_resume_4.txt  fresh_resume_5.txt  manifest.json  resume_01_alice.txt  resume_02_bob.txt  resume_03_carol.txt  resume_04_david.txt  resume_05_emily.txt  resume_06_frank.txt  resume_08_henry.txt  resume_09_igor.txt  resume_10_jack.txt  resume_11_keiko.txt  resume_12_liam.txt  resume_13_maya.txt  resume_14_noah.txt  resume_15_olivia.txt  resume_16_peter.txt  resume_17_quinn.txt  resume_18_rachel.txt  resume_19_samuel.txt  resume_20_tara.txt  resume_21_uma.txt  resume_22_victor.txt  resume_23_wendy.txt  resume_24_xander.txt  resume_25_yuki.txt  resume_26_zara.txt  resume_27_aaron.txt  resume_28_bianca.txt  resume_29_carlos.txt  resume_30_diana.txt  resume_30_elena.txt  resume_31_felix.txt  resume_32_gina.txt  resume_33_harold.txt  resume_34_isabelle.txt  (+16 more)
frontend/: index.html  package-lock.json  package.json
test_resumes/: manifest.json  resume_05_emma.txt  resume_06_frank.txt  resume_07_grace.txt  resume_08_henry.txt  resume_09_iris.txt  resume_10_jack.txt
(+33 files in other folders)
